# django-solana-payments

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
django_solana_payments/: __init__.py  admin.py  apps.py  choices.py  conftest.py  dtos.py  exceptions.py  helpers.py  models.py  settings.py  signals.py  urls.py  utils.py
django_solana_payments/api/: helpers.py  serializers.py
django_solana_payments/api/tests/: test_initiate_solana_payment_api.py  test_verify_transfer_api.py
django_solana_payments/api/views/: allowed_payment_crypto_token.py  initiate_solana_payment.py  solana_pay_payment.py  verify_transfer.py
django_solana_payments/integrations/django_payments/: __init__.py  forms.py  provider.py  utils.py
django_solana_payments/integrations/django_payments/tests/: test_provider.py
django_solana_payments/management/commands/: close_expired_one_time_wallets_and_reclaim_funds.py  close_expired_solana_payments.py  close_expired_solana_payments_with_wallets.py  recheck_initiated_solana_payments.py  send_solana_payments_from_one_time_wallets.py
django_solana_payments/migrations/: 0001_initial.py  0002_alter_paymentcryptotoken_payment_crypto_price.py
django_solana_payments/services/: __init__.py  main_wallet_service.py  one_time_wallet_service.py  solana_payments_service.py  verify_transaction_service.py  wallet_encryption_service.py
django_solana_payments/solana/: base_solana_client.py  dtos.py  enums.py  exceptions.py  solana_balance_client.py  solana_token_client.py  solana_transaction_builder.py  solana_transaction_query_client.py  solana_transaction_sender_client.py  utils.py
django_solana_payments/solana/tests/: test_base_solana_client.py  test_solana_balance_client.py  test_solana_token_client.py  test_solana_transaction_builder.py  test_solana_transaction_query_client.py  test_solana_transaction_sender_client.py
django_solana_payments/templatetags/: solana_payment_widget.py  solana_payment_widget_assets.py
django_solana_payments/tests/: conftest.py  settings.py  test_create_payment.py  test_main_wallet_service.py  test_management_commands.py  test_one_time_wallet_service.py  test_payment_token_validation.py  test_solana_payment_widget_template_tag.py  test_solana_payments_service.py  test_verify_transaction.py  test_verify_transaction_service.py  test_wallet_encryption.py  test_wallet_encryption_service.py
docs/: api_reference.rst  async_support.rst  conf.py  custom_models.rst  django_payments_integration.rst  drf_api_usage.rst  frontend_widget_configuration.rst  index.rst  installation.rst  management_commands.rst  one_time_wallets_encryption.rst  payment_confirmation_statuses.rst  payment_hooks.rst  payment_tokens.rst
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  payment_hooks.rst
examples/demo_project/: .env.example  .gitignore  README.md  dev_server.sh  requirements.txt
examples/demo_project/demo_project/: settings.py  urls.py
examples/demo_project/payments/: apps.py  models.py  signals.py
examples/demo_project/payments/migrations/: 0001_initial.py  0002_alter_customsolanapayment_paid_token.py  0003_alter_custompaymenttoken_payment_crypto_price.py
examples/demo_project/solana_payments/: apps.py  models.py  views.py  widget_config.py
examples/demo_project/solana_payments/migrations/: 0001_initial.py  0002_alter_customsolanapayment_paid_token.py  0003_alter_custompaymenttoken_payment_crypto_price.py  0004_checkoutpayment.py  0005_customsolanapayment_checkout_fields.py
examples/demo_project/solana_payments/templates/solana_payments/: payment.html  (+2 more)
frontend-widget/: README.md  package-lock.json  package.json  vite.config.ts
frontend-widget/src/: PaymentWidget.tsx  adapterRegistry.ts  auto-mount.tsx  mount.tsx  polyfills.ts  styles.css  types.ts  utils.ts
frontend-widget/src/api/: base.ts  bootstrap.ts  types.ts  verification.ts
frontend-widget/src/components/: SolanaPayQrCode.tsx  SolflareExtensionWalletAdapter.ts  WalletActionBlock.tsx  WidgetProviders.tsx
(+1 files in other folders)
