[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "django-solana-payments"
version = "0.1.0"
description = "A plug-and-play Django library for accepting online payments via the Solana blockchain"
authors = [
    { name = "Artemooon", email = "artiom.logachiov@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["payments", "solana", "e-commerce"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "Django>=4.2",
    "solana>=0.36.10",
    "solders>=0.18.0",
    "stamina>=23.1.0",
    "httpx>=0.24.0",
    "cryptography>=46.0.3,<47.0.0",
]

[project.optional-dependencies]
drf = ["djangorestframework >= 3.14"]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-django>=4.11.1,<5.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"

[project.urls]
homepage = "https://github.com/Artemooon/django-solana-payments"
documentation = "https://django-solana-payments.readthedocs.io/"
issues = "https://github.com/Artemooon/django-solana-payments/issues"
